@startuml

title __ORACLIB's Class Diagram__\n

  namespace  {
    namespace racLib {
      class OracLib.AdminViewController {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.BaseQuote {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.BookProfiles {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.BookViewer {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.Books {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.LibraryController {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      interface OracLib.LibraryView {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.LoginController {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.Main {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.MainController {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      namespace PDFViewFX {
        class OracLib.PDFViewFX.PDFBoxDocument {
        }
      }
    }
  }
  

  namespace  {
    namespace racLib {
      namespace PDFViewFX {
        class OracLib.PDFViewFX.PDFView {
        }
      }
    }
  }
  

  namespace  {
    namespace racLib {
      namespace PDFViewFX {
        namespace skins {
          class OracLib.PDFViewFX.skins.PDFViewSkin {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.QuoteController {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.RegisterController {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.UserData {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.UserProfileController {
      }
    }
  }
  

  namespace  {
    namespace racLib {
      class OracLib.UserProfiles {
      }
    }
  }
  

  OracLib.AdminViewController o-- OracLib.BookProfiles : bookProfiles
  OracLib.AdminViewController o-- OracLib.Main : main
  OracLib.AdminViewController o-- OracLib.UserProfiles : userProfiles
  OracLib.BookViewer o-- OracLib.Main : main
  OracLib.LibraryController .up.|> OracLib.LibraryView
  OracLib.LibraryController o-- OracLib.Main : main
  OracLib.LoginController o-- OracLib.Main : main
  OracLib.Main -up-|> javafx.application.Application
  OracLib.Main o-- OracLib.BookProfiles : bookProfiles
  OracLib.Main o-- OracLib.UserProfiles : userProfiles
  OracLib.MainController o-- OracLib.Main : main
  OracLib.PDFViewFX.PDFBoxDocument .up.|> OracLib.PDFViewFX.PDFView.SearchableDocument
  OracLib.PDFViewFX.PDFView -up-|> javafx.scene.control.Control
  OracLib.PDFViewFX.skins.PDFViewSkin -up-|> javafx.scene.control.SkinBase
  OracLib.PDFViewFX.skins.PDFViewSkin o-- OracLib.PDFViewFX.skins.PDFViewSkin.PagerService : pagerService
  OracLib.PDFViewFX.skins.PDFViewSkin o-- OracLib.PDFViewFX.skins.PDFViewSkin.SearchService : searchService
  OracLib.QuoteController -up-|> OracLib.BaseQuote
  OracLib.RegisterController o-- OracLib.Main : main
  OracLib.UserProfileController o-- OracLib.Main : main
  OracLib.UserProfileController o-- OracLib.UserProfiles : userProfiles


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
